@@ -5,6 +5,8 @@
   (:import-from #:40ants-doc/builder/printer)
   (:import-from #:40ants-doc/builder/bullet)
   (:import-from #:40ants-doc/locatives/base)
+  (:import-from #:40ants-doc/locatives
+                #:glossary-term)
   (:import-from #:40ants-doc/reference-api)
   (:import-from #:40ants-doc/markdown/transform))
 (in-package 40ants-doc/locatives/glossary)
